# hackathon-matcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
config/: app_settings.py  database_settings.py  email_settings.py  excel_settings.py  logging_settings.py
src/app/: dependencies.py  lifespan.py  main.py
src/email_templates/: match_approved.html  match_cancelled.html  match_rejected.html  match_request.html  template_renderer.py
src/exceptions/: auth_exceptions.py  base.py  excel_exceptions.py  handlers.py  lock_exceptions.py  match_exceptions.py  token_exceptions.py
src/logging/: logger_factory.py
src/models/: admin.py  enums.py  match_request.py  token.py  user.py
src/routers/: admin_router.py  auth_router.py  match_router.py  token_router.py  user_router.py
src/schemas/: admin_schemas.py  auth_schemas.py  excel_schemas.py  match_schemas.py  user_schemas.py
src/services/: admin_service.py  auth_service.py  cancellation_service.py  email_service.py  excel_service.py  lock_service.py  match_service.py  token_service.py  user_service.py
static/: index.html
static/css/: style.css
static/js/: admin.js  api_client.js  app.js  auth.js  match.js  utils.js
tests/: conftest.py
tests/e2e/: conftest.py  test_admin_flow.py  test_cancellation_flow.py  test_concurrent_matching.py  test_login_flow.py  test_match_flow.py
tests/integration/: test_excel_import_flow.py  test_match_repository.py  test_token_repository.py  test_user_repository.py
tests/unit/: test_auth_service.py  (+5 more)
(+10 files in other folders)
