[project]
name = "hackathon-matcher"
version = "1.0.0"
description = "Double opt-in partner matching system for hackathon participants"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.20",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.18",
    "aiosmtplib>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
